<resources>
    <string name="app_name">Moniq</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_activity_label">Answer</string>
    <string name="next">Далее</string>
    <string name="previous">Previous</string>

    <string name="task_first_activity">введите правильный ответ</string>
    <string name="task_second_activity">пиши сюда</string>
    <string name="textview1">Рекорд</string>
    <string name="znak">+</string>
    <string name="second_value">0</string>
    <string name="ravno">=</string>
    <string name="first_value">1</string>
    <string name="next_button">проверка</string>
    <string name="result_of_answer">Не верно!</string>
    <string name="back_button">назад</string>
    <string name="again_button">попробовать снова</string>
    <string name="true_answer">Правильно!</string>
    <string name="button_next">Новое задание</string>
    <string name="game_over">Game Over!</string>
    <string name="statistic">статистика</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_settings_fragment">Settings fragment</string>
    <string name="first_hw">1-я домашка</string>
    <string name="second_hw">дамашка на фрагменты</string>
    <string name="layouts_hw">3-я Layouts</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="java_and_the_beast">Java and the  Beast</string>
    <string name="march_2017_pg_129_minutes">March 2017 PG 129 minutes</string>
    <string name="button_left">RENT FROM R29</string>
    <string name="button_right">BUI FROM R121</string>
    <string name="text_Description">So how do we do that? How do we render this authenticity on the page? How can we create fantastic, real characters again and again and again?</string>
    <string name="cruuise">cruuise</string>
    <string name="_71">71 %</string>
    <string name="compas">compas</string>
    <string name="_242_ratings">242 ratings</string>
    <string name="nameUser">Name</string>
    <string name="User_description">Description</string>
    <string name="input_values">редактировать:</string>
    <string name="date">date</string>
    <string name="nameSpend">name</string>
    <string name="value">value</string>
    <string name="_4_recyclerview">4-я (recyclerView)</string>
    <string name="customview">5-я CustomView</string>
    <string name="notifications">6-я notifications</string>
    <string name="chat_activity">Chat Activity</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="threads">7-я threads</string>
    <string name="count">Ожидание запроса</string>
    <string name="insert_file">insert name file</string>
    <string name="inner_timer">inner timer</string>
    <string name="photoredactor">PhotoRedactor</string>
    <string name="saerchfiles">saerchFiles</string>
    <string name="mirror">Сяк</string>
    <string name="horizontal">так</string>
    <string name="image_chose">выбрать изображение</string>
    <string name="start_search">Start search</string>
    <string name="weather_button_string">8-я  weather</string>
    <string name="button_string_update">update</string>
    <string name="starting_svalivator">starting Svalivator</string>
    <string name="title_settings">settings</string>
    <string name="title_spends">spends</string>
    <string name="title_home">home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_balance_fragment">Balance fragment</string>
    <string name="text_ostatok">Остаток: 125 BYN</string>
    <string name="text_postupilo">Баланс:--</string>
    <string name="sign_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="sign_out">выход</string>
    <string name="send_to_support">написать сообщение</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="emailpassword_title_text">Авторизация</string>
    <string name="signed_out">сохраняйте ваши платежи</string>
    <string name="insert_email">введите почтовый адрес для восстановления пароля</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_spends_textview">Мои \nрасходы</string>
    <string name="text_view_balance">Баланс:</string>
    <string name="log_in">Войти</string>
    <string name="settings_push_notification">"Уведомления "</string>
    <string name="settings_total_cart">"Показывать карту"</string>

    <string name="channel_name">main_channel</string>
    <string name="channel_description">main_channel_description</string>
    <string name="text_write_name">пиши название платежа</string>
    <string name="question_save_spend">Сохранить платеж ?</string>
    <string name="insert_all_members">insert all members</string>
    <string name="write_username">Введите имя</string>
    <string name="write_mail">Введите email</string>
    <string name="write_password">Введите пароль</string>
    <string name="text_reg_to_login">Уже зарегистрированы?</string>

</resources>
